# swift-clang

./: .gitignore  CMakeLists.txt  Makefile
cmake/caches/: Apple-stage1.cmake  Apple-stage2.cmake
docs/: LanguageExtensions.rst  Modules.rst
docs/CommandGuide/: clang.rst
docs/tools/: clang.pod
examples/clang-interpreter/: main.cpp
include/clang-c/: Index.h
include/clang-service/: C-API.h  Messaging.h  ProtocolUIDs.inc  SafeLibclang.h  Service.h
include/indexstore/: IndexStoreCXX.h  indexstore.h
lib/APINotes/: APINotesManager.cpp  APINotesReader.cpp  APINotesYAMLCompiler.cpp  CMakeLists.txt  Types.cpp
lib/ARCMigrate/: ARCMT.cpp  CMakeLists.txt  FileRemapper.cpp  ObjCMT.cpp  Transforms.cpp  XCTMT.cpp  XCTMT.h
lib/AST/: ASTConsumer.cpp  ASTContext.cpp  ASTDiagnostic.cpp  ASTDumper.cpp  ASTImporter.cpp  CMakeLists.txt  DeclBase.cpp  DeclObjC.cpp  DeclPrinter.cpp  Expr.cpp  ExprClassification.cpp  ExprConstant.cpp  ItaniumMangle.cpp  StmtDumper.cpp  StmtPrinter.cpp  StmtProfile.cpp  Type.cpp  TypeLoc.cpp  TypePrinter.cpp
lib/Analysis/: CMakeLists.txt  OSLog.cpp  PrintfFormatString.cpp
lib/Basic/: CMakeLists.txt  Diagnostic.cpp  DiagnosticIDs.cpp  DirectoryWatcher.cpp  FileManager.cpp  IdentifierTable.cpp  Module.cpp  Targets.cpp  Version.cpp  VirtualFileSystem.cpp
lib/CodeGen/: BackendUtil.cpp  CGBlocks.cpp  CGBuiltin.cpp  CGCXX.cpp  CGCXXABI.h  CGCall.cpp  CGClass.cpp  CGDebugInfo.cpp  CGDebugInfo.h  CGDecl.cpp  CGException.cpp  CGExpr.cpp  CGExprAgg.cpp  CGExprComplex.cpp  CGExprConstant.cpp  CGExprScalar.cpp  CGObjC.cpp  CGObjCGNU.cpp  CGObjCMac.cpp  CGObjCRuntime.h  CGRTTI.cpp  CGStmt.cpp  CMakeLists.txt  CodeGenAction.cpp  CodeGenFunction.cpp  CodeGenFunction.h  CodeGenModule.cpp  CodeGenModule.h  ItaniumCXXABI.cpp  LLVMModuleProvider.cpp  ModuleBuilder.cpp  ObjectFilePCHContainerOperations.cpp  TargetInfo.cpp  TargetInfo.h
lib/Driver/: Driver.cpp  HostInfo.cpp  Job.cpp  SanitizerArgs.cpp  SanitizerArgs.h  ToolChain.cpp  ToolChains.cpp  ToolChains.h  Tools.cpp  Tools.h
lib/Edit/: CMakeLists.txt  Commit.cpp  RewriteObjCFoundationAPI.cpp
lib/Frontend/: ASTMerge.cpp  ASTUnit.cpp  CMakeLists.txt  ChainedIncludesSource.cpp  CodeGenOptions.cpp  CompilerInstance.cpp  CompilerInvocation.cpp  DiagnosticRenderer.cpp  FrontendAction.cpp  FrontendActions.cpp  InitHeaderSearch.cpp  InitPreprocessor.cpp  MultiplexConsumer.cpp  Warnings.cpp
lib/FrontendTool/: ExecuteCompilerInvocation.cpp
lib/Headers/: CMakeLists.txt  Makefile  module.map  x86intrin.h
lib/Index/: CMakeLists.txt  ClangIndexRecordWriter.cpp  ClangIndexRecordWriter.h  IndexBitCodes.h  IndexDataStore.cpp  IndexDataStoreUtils.h  IndexRecordHasher.cpp  IndexRecordReader.cpp  IndexRecordWriter.cpp  IndexRecordWriter.h  IndexSymbol.cpp  IndexUnitReader.cpp  IndexUnitWriter.cpp  IndexUnitWriter.h  IndexingAction.cpp  IndexingContext.cpp  IndexingContext.h
lib/Lex/: HeaderSearch.cpp  ModuleMap.cpp  PPDirectives.cpp  PPLexerChange.cpp  PPMacroExpansion.cpp  Pragma.cpp
lib/Parse/: ParseCXXInlineMethods.cpp  ParseDecl.cpp  ParseDeclCXX.cpp  ParseExpr.cpp  ParseExprCXX.cpp  ParseInit.cpp  ParseObjc.cpp  ParseStmt.cpp  ParseTemplate.cpp  ParseTentative.cpp  Parser.cpp
lib/Rewrite/: FixItRewriter.cpp
lib/Sema/: CMakeLists.txt  DeclSpec.cpp  Sema.cpp  SemaAPINotes.cpp  SemaCast.cpp  SemaChecking.cpp  SemaCodeComplete.cpp  SemaDecl.cpp  SemaDeclAttr.cpp  SemaDeclCXX.cpp  SemaDeclObjC.cpp  SemaExpr.cpp  SemaExprCXX.cpp  SemaExprMember.cpp  SemaExprObjC.cpp  SemaObjCProperty.cpp  SemaOverload.cpp  SemaPseudoObject.cpp  SemaStmt.cpp  SemaStmtAsm.cpp  SemaTemplate.cpp  SemaTemplateVariadic.cpp  SemaType.cpp  TreeTransform.h
lib/Serialization/: ASTCommon.cpp  ASTReader.cpp  ASTReaderDecl.cpp  ASTReaderStmt.cpp  ASTWriter.cpp  ASTWriterDecl.cpp  ASTWriterStmt.cpp  GeneratePCH.cpp  GlobalModuleIndex.cpp  Module.cpp  ModuleManager.cpp
lib/Tooling/: Refactoring.cpp  Tooling.cpp
runtime/compiler-rt/: Makefile
test/: CMakeLists.txt  lit.cfg
test/APINotes/: availability.m  cache.m  nullability.c  nullability.m  objc_designated_inits.m  yaml-reader-errors.c
test/ARCMT/: GC-check-warn-nsalloc.m  GC-check.m  GC-no-arc-runtime.m  GC-no-finalize-removal.m  GC.m  HeaderLib.h.result  SomeKit.h.result  SomeKitForNullAnnotation.h.result  SomeKit_Private.h.result  atautorelease-2.m  autoreleases.m  (+23 more)
tools/: CMakeLists.txt  Makefile
tools/clang-service/: CMakeLists.txt  README.txt
tools/clang-service/lib/: CMakeLists.txt
tools/clang-service/lib/Core/: Service.cpp
tools/clang-service/lib/Support/: Value.cpp
tools/clang-service/lib/XPC/: Service.cpp
tools/clang-service/unittests/: CodeCompletion.cpp  Communication.cpp  Indexing.cpp
unittests/ASTMatchers/Dynamic/: CMakeLists.txt  Makefile
(+638 files in other folders)
